# VulkanFirst

./: .env.cmake  CMakeLists.txt  compile.bat  envUnixExample.cmake  envWindowsExample.cmake  first_app.cpp  first_app.hpp  lve_camera.cpp  lve_camera.hpp  lve_device.cpp  lve_frame_info.hpp  lve_game_object.cpp  lve_game_object.hpp  lve_model.cpp  lve_model.hpp  lve_pipeline.cpp  lve_pipeline.hpp  lve_renderer.cpp  lve_renderer.hpp  lve_swap_chain.cpp  lve_swap_chain.hpp  lve_utils.hpp  lve_window.cpp  lve_window.hpp  simple_render_system.hpp  simple_renderer_system.cpp  unixBuild.sh
Extensions/: vertex_extension.cpp  vertex_extension.hpp
ShaderSources/: point_light.frag  point_light.vert  simple_shader.frag  simple_shader.vert
ShadersSource/: point_light.frag  point_light.vert  simple_shader.frag  simple_shader.vert
Src/: first_app.cpp  first_app.hpp  imgui.hpp  keyboard_movement_controller.cpp  keyboard_movement_controller.hpp  lve_camera.cpp  lve_camera.hpp  lve_descriptors.cpp  lve_descriptors.hpp  lve_device.cpp  lve_device.hpp  lve_frame_info.hpp  lve_game_object.cpp  lve_game_object.hpp  lve_model.cpp  lve_model.hpp  lve_pipeline.cpp  lve_pipeline.hpp  lve_renderer.cpp  lve_renderer.hpp  lve_swap_chain.cpp  lve_texture_storage.cpp  lve_texture_storage.hpp  lve_window.cpp  lve_window.hpp  main.cpp  simple_renderer_system.cpp
Src/Definitions/: DefaultSamplersNames.hpp
Src/Helpers/: VulkanHelpers.cpp  VulkanHelpers.hpp
Src/Systems/: point_light_system.cpp  point_light_system.hpp  simple_render_system.hpp  simple_renderer_system.cpp
